audiophile-client/src/app/home/home.component.scss
@import "abstracts/variables";

@import "base/typography";

@import "components/buttons";
@import "main";

img {
  display: block;
  max-width: 100%;
}

.product {
  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
    url("../../assets/home/mobile/image-header.jpg");
  background-position: center bottom;
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  padding-top: 6.5em;
  padding-bottom: 9em;
  text-align: center;
}

.product-wrapper {
  width: 90%;
  margin: 0 auto;
  margin-bottom: -2.5em;
}

.product__new {
  font-size: 0.875rem;
  font-weight: $fw-regular;
  letter-spacing: 0.625rem;
  text-transform: uppercase;
  color: rgba($color: #fff, $alpha: 0.5);
}

.product__title {
  font-size: 2.25rem;
  font-weight: $fw-bold;
  text-transform: uppercase;
  line-height: 2.5rem;
  letter-spacing: 0.081rem;
}

.product__text {
  font-size: 0.938rem;
  font-weight: $fw-light;
  line-height: 1.563rem;
  max-width: 40ch;
  margin: 0 auto;
  color: rgba($color: #fff, $alpha: 0.75);
  margin-bottom: 2em;
}

.product--orange {
  // background: url("/assets/home/desktop/pattern-circles.svg");
  // background-position: center 100%;
  // background-repeat: no-repeat;
  // background-size: 170%;
  padding: 2em 0;
  margin-bottom: 1em;
  background-color: $clr-accent-400;
  text-align: center;
  border-radius: 0.5em;
  position: relative;
  // z-index: -10;
}

.pattern {
  position: absolute;
  width: 120%;
  height: 100%;
  object-fit: cover;
  top: -20%;
  // z-index: -5;
}

.product--orange .product__title {
  color: white;
}

.product__img {
  width: 30%;
  margin: 2em auto;
}

.product--gray {
  // background: url("/assets/home/mobile/image-speaker-zx7.jpg");
  // background-repeat: no-repeat;
  // background-size: cover;
  // border-radius: 0.5em;
  padding: 6em 0;
  // margin: 1em;
  position: relative;
  border-radius: 0.5em;

  .product__title {
    margin-bottom: 1em;
    font-size: 1.75rem;
  }

  .product__img {
    position: absolute;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    top: -13%;
    left: 0;
    // transform: translate(-50%, -50%);
    z-index: -5;
    border-radius: 0.5em;
  }
}

.product--gray__wrapper {
  margin: 0 auto;
  margin-left: 5%;
}

@media (min-width: 768px) {
  .product {
    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
      url("../../assets/home/tablet/image-header.jpg");
    background-position: center bottom;
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 7em;
  }

  .product-wrapper {
    margin-bottom: 2em;
  }

  .product__title {
    font-size: 3.5rem;
    line-height: 3.5rem;
    letter-spacing: 2px;
    margin: 0.5em 0;
  }

  // .product--gray {
  //   background: url("/assets/home/tablet/image-speaker-zx7.jpg");
  //   background-repeat: no-repeat;
  // }
}

